# caliper

./: .gitignore  README.md  caliper.opam  dune-project  tailwind.config.js
.github/workflows/: main.yml
example/: dune
example/cache/foo/bar/: 0  1
example/html-output/: index.html  main.css
example/html-output/_/: foo.html
lib/: bench.ml  cache.ml  cache.mli  caliper.ml  cb.ml  config.ml  dune  html.ml
lib/html-assets/: collection.html  index.html  plot.js  project.html  styles.css
scripts/: cb-dump.sh  cb-dump.sql  generate.sh
test/: dune
test/generate-html-dashboard.t/: run.t
test/generate-html-dashboard.t/cache/foo/: 0
test/generate-html-dashboard.t/cache/foo/bar/: 0
test/parse-cb-json.t/: run.t  sample.json
test/print-collection-diff.t/: run.t
test/print-collection-diff.t/cache/foo/bar/: 1
